--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/three": "^0.148.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "three": "^0.148.0"
   },
   "devDependencies": {
