--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "three": "^0.148.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
