--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/three": "^0.148.0",
     "framer-motion": "^8.5.2",
     "i18next": "^23.7.16",
+    "i18next-browser-languagedetector": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.0",
     "react-icons": "^4.7.1",
+    "react-tabs": "^6.0.2",
     "three": "^0.148.0"
   },
   "devDependencies": {
